<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >


    
    <LinearLayout
        android:id="@+id/layout_fromCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_camera_alt_24"
            app:tint="@color/colorPrimary"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_fromCamera"
            android:textSize="12sp"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="8dp"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@android:color/darker_gray"
        />

    <LinearLayout
        android:id="@+id/layout_fromGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_image_24"
            app:tint="@color/colorPrimary"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_fromGallery"
            android:textSize="12sp"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="8dp"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@android:color/darker_gray"
        />

    <LinearLayout
        android:id="@+id/layout_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_exit_to_app_24"
            app:tint="@color/colorPrimary"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_logout"
            android:textSize="12sp"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="8dp"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@android:color/darker_gray"
        />

    <LinearLayout
        android:id="@+id/layout_deleteAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_delete_24"
            app:tint="@color/colorRed"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_deleteAccount"
            android:textSize="12sp"
            android:textColor="@color/colorRed"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="8dp"
            />
    </LinearLayout>
    
</LinearLayout>
