<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".views.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/ic_happiness_running"
                android:transitionName="splash"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                app:srcCompat="@drawable/illustration" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="220dp"
                android:layout_marginEnd="32dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="4dp"
                app:cardElevation="20dp"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/textView_login"
                        android:textColor="@color/colorText"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp">

                        <EditText
                            android:id="@+id/editText_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="@string/editText_email"
                            android:background="@null"
                            android:drawableStart="@drawable/username"
                            android:hint="@string/editText_email"
                            android:inputType="textEmailAddress"
                            android:maxLength="100"
                            android:maxLines="1"
                            android:padding="8dp"
                            android:paddingStart="8dp"
                            android:paddingTop="12sp"
                            android:paddingEnd="8dp"
                            android:paddingBottom="12dp"
                            android:textColor="@color/colorText"
                            android:textSize="12sp"
                            android:textStyle="bold"

                            />
                    </com.google.android.material.textfield.TextInputLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.75dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/textView_err_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textView_err_email"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorRed"
                        android:layout_gravity="start"
                        android:layout_marginTop="4dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:visibility="gone"
                        />






                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="10dp"
                        app:passwordToggleEnabled="true"
                        >

                        <EditText
                            android:id="@+id/editText_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="@string/editText_password"
                            android:background="@null"
                            android:drawableStart="@drawable/password"
                            android:hint="@string/editText_password"
                            android:inputType="textPassword"
                            android:maxLength="100"
                            android:maxLines="1"
                            android:padding="8dp"
                            android:paddingStart="8dp"
                            android:paddingTop="12sp"
                            android:paddingEnd="8dp"
                            android:paddingBottom="12dp"
                            android:textColor="@color/colorText"
                            android:textSize="12sp"
                            android:textStyle="bold"

                            />
                    </com.google.android.material.textfield.TextInputLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.75dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/textView_err_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textView_err_password"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorRed"
                        android:layout_gravity="start"
                        android:layout_marginTop="4dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:visibility="gone"
                        />

                    <TextView
                        android:id="@+id/textView_forgetPass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textView_forgetpassword"
                        android:textSize="12sp"
                        android:textColor="#3F51B5"
                        android:textStyle="bold"
                        android:layout_gravity="end"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="36dp"
                        />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/card"
                android:layout_marginTop="32dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:weightSum="2"
                >
                <CheckBox
                    android:id="@+id/checkBox_remember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkBox_remember"
                    android:textSize="10sp"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="bold"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    />

                <Button
                    android:id="@+id/button_signIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_signIn"
                    android:textSize="14sp"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:layout_weight="1"
                    android:background="@drawable/background_button"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_below="@id/layout"
                android:layout_marginTop="24dp"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/rounded_rectangle"
                    />

                <TextView
                    android:id="@+id/textView_socialSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textView_socialSignUp"
                    android:textSize="14sp"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="bold"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/rounded_rectangle"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_below="@id/layout2"
                android:layout_marginTop="24dp"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/fb"
                    android:layout_marginEnd="12dp"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/g"
                    android:layout_marginEnd="12dp"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/in"
                    android:layout_marginEnd="12dp"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/tw"
                    android:layout_marginEnd="12dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_below="@id/layout3"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="48dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textView_newUser"
                    android:textSize="12sp"
                    android:textColor="@color/colorText"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/textView_signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textView_signUp"
                    android:textSize="12sp"
                    android:textColor="#3F51B5"
                    android:textStyle="bold"
                    android:layout_marginStart="4dp"
                    />

            </LinearLayout>


        </RelativeLayout>

    </LinearLayout>

</ScrollView>